---------------------------------------------------------------------------------------------------
Version: 3.1.11
Date: ????
  Bugfixes:
    - Fixed a crash with Krastorio2 caused by accessing an icon-path that has been moved
---------------------------------------------------------------------------------------------------
Version: 3.1.10
Date: 2022.01.04
  Features:
    - Added support for DiscoScience
    - Added recipes for upgrading crystal solar panels from size 1 to max size
---------------------------------------------------------------------------------------------------
Version: 3.1.9
Date: 2021.10.27
  Bugfixes:
    - Fixed a crash with 5dims transport
---------------------------------------------------------------------------------------------------
Version: 3.1.8
Date: 2021.09.26
  Bugfixes:
    - Fixed that crystal solar recipes were accidently removed
---------------------------------------------------------------------------------------------------
Version: 3.1.7
Date: 2021.09.01
  Bugfixes:
    - Fixed a typo that caused a crash with HR graphics turned off
---------------------------------------------------------------------------------------------------
Version: 3.1.6
Date: 2021.09.01
  Features:
    - New small iron / omnicium electric pole graphics (Also fixes hitbox issues)
  Changes:
    - Reduced the small omnicium electric pole wire distance to 8.5
    - Increased the small iron electric pole supply area radius to 3.5
    - Iron / omnicium small electric poles now require the previous one to craft
  Bugfixes:
    - Fixed that coal in rock loot was not replaced with purified omnite anymore
    - Fixed that the Omnifurnace Mk 3 did not allow recipes with multiple ingredients
---------------------------------------------------------------------------------------------------
Version: 3.1.5
Date: 2021.08.14
  Changes:
    - Reduced the required omnite bricks for the burner mining drill from 4 to 1